2005-11-24  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c: Linked list of color maps separate from the linked
	list for x11 plots. Bugfix for different color palettes in different
	x11 terminal windows and resizing them.

2005-11-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/hidden3d.c (build_networks): Fix handling of previousvertex
	variable for point-like objects, which don't need it.

2005-11-14  Juergen Wieferink  <wieferink@freenet.de>

	* src/set.c (set_xyzlabel): Fix parsing error in backwards-compatible
	form "set xlabel 'foo' -1,-1".

2005-11-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): Check whether user-specified tic is major
	or minor before choosing a line type for the corresponding grid line.

	* term/gd.trm (ENHGD_put_text) term/pdf.trm (ENHPDF_put_text):
	Fix typos that caused justification to fail for rotated, enhanced
	mode text strings.

2005-11-11  Harald Harders  <h.harders@tu-bs.de>

	* src/axis.c (axis_output_tics): Normally the tics are placed to
	dodge the border line.  If the border line is not drawn, then do
	not try to dodge it.

2005-11-11  Ethan Merritt  <merritt@u.washington.edu>

	* term/metapost.trm: Update driver to support version 4.1 features.
	Implement general text rotation.
	Add partial density solid fill support for rectangles and polygons,
	with pattern fill implemented as incremental density solid fill.
	Fix bugs in terminal option font parsing.
	Keep track of dash pattern independent of line color

2005-11-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arrow): Revert previous patch, since it seems
	the bad effects outweigh the good.

2005-11-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arrow): Add a work-around for broken behaviour
	by the postscript terminal.  post.trm does not correctly report
	the current canvas size, so arrows cannot be clipped against the